feat: adicionado documentação de lançamentos e configuração de função para as rotas
